intermediate checkin, fix some problems with the packaging builder, make configId optional in plans
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/configid@377921 13f79535-47bb-0310-9956-ffa450edef68